--- a/.github/workflows/ci-uffs-cc.yml
+++ b/.github/workflows/ci-uffs-cc.yml
@@ -14,23 +14,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-
-###############################################################################
-    - name: Checkout and setup nodejs
-###############################################################################
+    - name: Checkout and Node setup
       uses: actions/setup-node@v1
       with:
         node-version: '12.x'
-
-###############################################################################
-    - name: Extract workflow info
-###############################################################################
+    - name: Install dependencies
       run: npm ci
+    - name: Extract info
       uses: Dovyski/payload-info-action@v1
+      id: info
       with:
         filter_push: '.commits[].author'
         filter_pull_request: '.pull_request.commits'
-      id: info
 
 ###############################################################################
     - name: Prepare deploy server
